--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/roboto-fontface/css/roboto/sass/roboto-fontface.scss",
               "node_modules/animate.css/animate.min.css",
+              "node_modules/font-awesome/scss/font-awesome.scss",
               "src/styles.scss"
             ],
             "scripts": [
