--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "fa-icons": "^0.1.5",
+    "font-awesome": "^4.7.0",
+    "material-design-icons": "^3.0.1",
     "ng2-animate-on-scroll": "^1.1.0",
     "roboto-fontface": "^0.10.0",
     "rxjs": "~6.3.3",
