--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "typeit": "^6.0.3",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
