--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.5",
-    "@angular/cdk": "^7.3.7",
-    "@angular/common": "~8.2.5",
-    "@angular/compiler": "~8.2.5",
-    "@angular/core": "~8.2.5",
-    "@angular/forms": "~8.2.5",
-    "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "~8.2.5",
-    "@angular/platform-browser-dynamic": "~8.2.5",
-    "@angular/router": "~8.2.5",
+    "@angular/animations": "^9.0.0-next.5",
+    "@angular/cdk": "^8.1.4",
+    "@angular/common": "~9.0.0-next.5",
+    "@angular/compiler": "~9.0.0-next.5",
+    "@angular/core": "~9.0.0-next.5",
+    "@angular/forms": "~9.0.0-next.5",
+    "@angular/material": "^8.1.4",
+    "@angular/platform-browser": "~9.0.0-next.5",
+    "@angular/platform-browser-dynamic": "~9.0.0-next.5",
+    "@angular/router": "~9.0.0-next.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.21",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "animate.css": "^3.7.2",
@@ -35,13 +35,13 @@
     "tslib": "^1.9.0",
     "typeit": "^6.0.3",
     "web-animations-js": "^2.3.2",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.3",
     "@angular/cli": "~8.3.3",
-    "@angular/compiler-cli": "~8.2.5",
-    "@angular/language-service": "~8.2.5",
+    "@angular/compiler-cli": "~9.0.0-next.5",
+    "@angular/language-service": "~9.0.0-next.5",
     "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
