--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/material": "^8.2.0",
     "@angular/platform-browser": "~9.0.0-next.5",
     "@angular/platform-browser-dynamic": "~9.0.0-next.5",
+    "@angular/pwa": "^0.803.4",
     "@angular/router": "~9.0.0-next.5",
+    "@angular/service-worker": "~9.0.0-next.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.21",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "animate.css": "^3.7.2",
