--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^9.0.0-next.6",
-    "@angular/cdk": "^8.2.0",
+    "@angular/cdk": "^8.2.1",
     "@angular/common": "~9.0.0-next.5",
     "@angular/compiler": "~9.0.0-next.5",
     "@angular/core": "~9.0.0-next.5",
+    "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~9.0.0-next.5",
     "@angular/material": "^8.2.0",
     "@angular/platform-browser": "~9.0.0-next.5",
