--- a/package.json
+++ b/package.json
@@ -11,25 +11,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.0-next.6",
-    "@angular/cdk": "^8.2.1",
-    "@angular/common": "~9.0.0-next.5",
-    "@angular/compiler": "~9.0.0-next.5",
-    "@angular/core": "~9.0.0-next.5",
+    "@angular/animations": "^9.0.0-next.10",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "^9.0.0-next.10",
+    "@angular/compiler": "^9.0.0-next.10",
+    "@angular/core": "^9.0.0-next.10",
     "@angular/flex-layout": "^8.0.0-beta.27",
-    "@angular/forms": "~9.0.0-next.5",
-    "@angular/material": "^8.2.0",
-    "@angular/platform-browser": "~9.0.0-next.5",
-    "@angular/platform-browser-dynamic": "~9.0.0-next.5",
-    "@angular/pwa": "^0.803.4",
-    "@angular/router": "~9.0.0-next.5",
-    "@angular/service-worker": "~9.0.0-next.5",
-    "@fortawesome/fontawesome-svg-core": "^1.2.21",
-    "@fortawesome/free-solid-svg-icons": "^5.10.1",
+    "@angular/forms": "^9.0.0-next.10",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "^9.0.0-next.10",
+    "@angular/platform-browser-dynamic": "^9.0.0-next.10",
+    "@angular/pwa": "^0.803.9",
+    "@angular/router": "^9.0.0-next.10",
+    "@angular/service-worker": "^9.0.0-next.10",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
-    "core-js": "^2.5.4",
-    "fa-icons": "^0.1.5",
+    "core-js": "^2.6.10",
+    "fa-icons": "^0.1.7",
     "font-awesome": "^4.7.0",
     "material-design-icons": "^3.0.1",
     "roboto-fontface": "^0.10.0",
@@ -40,19 +40,19 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.3",
-    "@angular/cli": "~8.3.3",
-    "@angular/compiler-cli": "~9.0.0-next.5",
-    "@angular/language-service": "~9.0.0-next.5",
-    "@types/node": "~8.9.4",
+    "@angular-devkit/build-angular": "^0.803.9",
+    "@angular/cli": "^8.3.9",
+    "@angular/compiler-cli": "^9.0.0-next.10",
+    "@angular/language-service": "^9.0.0-next.10",
     "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.1",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "~8.9.4",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
