--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.0-next.10",
+    "@angular/animations": "^9.0.1",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "^9.0.0-next.10",
-    "@angular/compiler": "^9.0.0-next.10",
-    "@angular/core": "^9.0.0-next.10",
-    "@angular/forms": "^9.0.0-next.10",
-    "@angular/platform-browser": "^9.0.0-next.10",
-    "@angular/platform-browser-dynamic": "^9.0.0-next.10",
+    "@angular/common": "^9.0.1",
+    "@angular/compiler": "^9.0.1",
+    "@angular/core": "^9.0.1",
+    "@angular/forms": "^9.0.1",
+    "@angular/platform-browser": "^9.0.1",
+    "@angular/platform-browser-dynamic": "^9.0.1",
     "@angular/pwa": "^0.803.9",
-    "@angular/router": "^9.0.0-next.10",
-    "@angular/service-worker": "^9.0.0-next.10",
+    "@angular/router": "^9.0.1",
+    "@angular/service-worker": "^9.0.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "bootstrap": "^4.4.1",
@@ -33,10 +33,10 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.21",
-    "@angular/cli": "^8.3.9",
-    "@angular/compiler-cli": "^9.0.0-next.10",
-    "@angular/language-service": "^9.0.0-next.10",
+    "@angular-devkit/build-angular": "^0.900.2",
+    "@angular/cli": "^9.0.2",
+    "@angular/compiler-cli": "^9.0.1",
+    "@angular/language-service": "^9.0.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
@@ -51,6 +51,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.7.5"
   }
 }
