no analytics for now

--- a/angular.json
+++ b/angular.json
@@ -146,5 +146,8 @@
       }
     }
   },
-  "defaultProject": "portfolio"
+  "defaultProject": "portfolio",
+  "cli": {
+    "analytics": false
+  }
 }
