--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^10.0.3",
-    "@angular/cdk": "^9.0.0",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "^10.0.3",
     "@angular/compiler": "^10.0.3",
     "@angular/core": "^10.0.3",
     "@angular/forms": "^10.0.3",
     "@angular/platform-browser": "^10.0.3",
     "@angular/platform-browser-dynamic": "^10.0.3",
-    "@angular/pwa": "^0.803.9",
+    "@angular/pwa": "^0.803.28",
     "@angular/router": "^10.0.3",
     "@angular/service-worker": "^10.0.3",
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "bootstrap": "^4.4.1",
-    "core-js": "^2.6.10",
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "bootstrap": "^4.5.0",
+    "core-js": "^2.6.11",
     "font-awesome": "^4.7.0",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.9.0",
+    "rxjs": "^6.5.5",
+    "tslib": "^1.13.0",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.3"
   },
@@ -37,18 +37,18 @@
     "@angular/cli": "^10.0.2",
     "@angular/compiler-cli": "^10.0.3",
     "@angular/language-service": "^10.0.3",
-    "@types/jasmine": "~2.8.8",
+    "@types/jasmine": "^2.8.17",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.6",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.9.6"
