--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.5.0",
     "core-js": "^2.6.11",
     "font-awesome": "^4.7.0",
+    "gulp": "^4.0.2",
     "rxjs": "^6.5.5",
     "tslib": "^1.13.0",
     "web-animations-js": "^2.3.2",
