--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-builders/custom-webpack": "^10.0.0",
     "@angular/animations": "^10.0.3",
     "@angular/cdk": "^10.2.0",
     "@angular/common": "^10.0.3",
