--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "bootstrap": "^4.5.0",
+    "brotli-webpack-plugin": "^1.1.0",
+    "compression-webpack-plugin": "^5.0.2",
     "core-js": "^2.6.11",
     "font-awesome": "^4.7.0",
     "gulp": "^4.0.2",
