--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
     "core-js": "^2.6.11",
     "font-awesome": "^4.7.0",
     "gulp": "^4.0.2",
+    "gulp-brotli": "^3.0.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-filter": "^6.0.0",
+    "gulp-gzip": "^1.4.2",
+    "gulp-purify-css": "^0.1.0",
     "rxjs": "^6.5.5",
     "tslib": "^1.13.0",
     "web-animations-js": "^2.3.2",
