--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "optimizecss": "gulp --gulpfile build-scripts/optimize-css.gulpfile.js"
   },
   "private": true,
   "dependencies": {
@@ -36,6 +37,7 @@
     "gulp-filter": "^6.0.0",
     "gulp-gzip": "^1.4.2",
     "gulp-purify-css": "^0.1.0",
+    "gulp-rename": "^2.0.0",
     "rxjs": "^6.5.5",
     "tslib": "^1.13.0",
     "web-animations-js": "^2.3.2",
