--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-clean": "^0.4.0",
     "gulp-filter": "^6.0.0",
     "gulp-gzip": "^1.4.2",
+    "gulp-purgecss": "^2.3.0",
     "gulp-purify-css": "^0.1.0",
     "gulp-rename": "^2.0.0",
     "rxjs": "^6.5.5",
