--- a/package.json
+++ b/package.json
@@ -6,23 +6,31 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "dev:ssr": "ng run portfolio:serve-ssr",
+    "serve:ssr": "node dist/portfolio/server/main.js",
+    "build:ssr": "ng build --prod && ng run portfolio:server:production",
+    "prerender": "ng run portfolio:prerender"
   },
   "private": true,
   "dependencies": {
     "@angular-builders/custom-webpack": "^10.0.0",
+    "@angular/animations": "^10.1.1",
     "@angular/common": "^10.0.3",
     "@angular/compiler": "^10.0.3",
     "@angular/core": "^10.0.3",
     "@angular/platform-browser": "^10.0.3",
     "@angular/platform-browser-dynamic": "^10.0.3",
+    "@angular/platform-server": "^10.0.3",
     "@angular/pwa": "^0.803.28",
     "@angular/router": "^10.0.3",
     "@angular/service-worker": "^10.0.3",
+    "@nguniversal/express-engine": "^10.1.0",
     "bootstrap": "^4.5.0",
     "brotli-webpack-plugin": "^1.1.0",
     "compression-webpack-plugin": "^5.0.2",
     "core-js": "^2.6.11",
+    "express": "^4.15.2",
     "gulp": "^4.0.2",
     "gulp-brotli": "^3.0.0",
     "gulp-clean": "^0.4.0",
@@ -40,6 +48,8 @@
     "@angular/cli": "^10.0.2",
     "@angular/compiler-cli": "^10.0.3",
     "@angular/language-service": "^10.0.3",
+    "@nguniversal/builders": "^10.1.0",
+    "@types/express": "^4.17.0",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.2.2",
     "http-server": "^0.12.3",
