--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@angular/language-service": "^10.0.3",
     "@nguniversal/builders": "^10.1.0",
     "@types/express": "^4.17.0",
-    "@types/node": "~8.9.4",
+    "@types/node": "^14.10.1",
     "codelyzer": "^5.2.2",
     "http-server": "^0.12.3",
     "ts-node": "~7.0.0",
