--- a/angular.json
+++ b/angular.json
@@ -85,7 +85,7 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["src/tsconfig.app.json","src/tsconfig.spec.json","src/tsconfig.server.json"],
+            "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json", "src/tsconfig.server.json"],
             "exclude": ["**/node_modules/**"]
           }
         },
@@ -122,9 +122,7 @@
           "options": {
             "browserTarget": "portfolio:build:production",
             "serverTarget": "portfolio:server:production",
-            "routes": [
-              "/"
-            ]
+            "routes": ["/"]
           },
           "configurations": {
             "production": {}
